--- a/style/style.css
+++ b/style/style.css
@@ -15,8 +15,19 @@ a {
     color: black;
 }
 
-.drinks {
-    border-color: black;
+.drink-container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
+   padding: 20px;
+}
+
+.drink {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
 }
 
 img {
