--- a/style/style.css
+++ b/style/style.css
@@ -23,7 +23,6 @@ a {
 }
 
 .drink {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,4 +31,5 @@ a {
 
 img {
     width: 200px;
+    max-height: 200px;
 }
